--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <!-- Twitter Bootstrap CSS -->
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap-responsive.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/master.css" media="screen" />
 
         <!-- Cordova JS (must load first) -->
-        <script type="text/javascript" src="lib/cordova-2.2.0/cordova.android.js"></script>
+        <script type="text/javascript" src="lib/cordova-2.2.0/cordova-2.2.0.js"></script>
 
         <!-- Require.js entry point -->
         <script type="text/javascript" data-main="main" src="lib/require-2.1.1/require.js"></script>
@@ -17,6 +18,10 @@
 
     <body>
         <div id="root" class="container-fluid">
+            <div id="loading" class="hero-unit">
+                <h2>LTL P&D</h2>
+                <p>Application loading, please wait...</p>
+            </div>
         </div>
     </body>
 </html>
