Trying a few different application setups, not currently working - circular dependency between views and app object

--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -10,32 +10,31 @@
 
         <div class="nav-collapse collapse">
             <ul class="nav">
-                <li><a href="#">Test 1</a></li>
-                <li><a href="#">Test 2</a></li>
-                <li><a href="#">Test 3</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </div>
     </div>
 </div>
+
 <div class="row-fluid">
-    <h1>Home View</h1>
+    <h1>Login</h1>
 </div>
 
 <div class="row-fluid">
-    <div class="span10">
-        <p>Click a button...</p>
-    </div>
-    <div class="span1">
-        <button class="btn btn-primary" id="nextView">Next</button>
-    </div>
-    <div class="span1">
-        <button class="btn btn-primary" id="nextView"><i class="icon-search icon-white"></i></button>
+    <div class="span4 offset4">
+        <input id="userName" type="text" placeholder="Username" />
     </div>
 </div>
 
 <div class="row-fluid">
     <div class="span4 offset4">
-        <button class="btn btn-primary btn-block">Login</button>
+        <input id="password" type="text" placeholder="Password" />
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span4 offset4">
+        <button id="login" class="btn btn-primary btn-block">Login</button>
     </div>
 </div>
 
