Removing build again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap-responsive.css" media="screen" />
 
         <!-- Applicaton CSS -->
-        <link rel="stylesheet" type="text/css" href="css/master.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     </head>
 
     <body>
