Re-organized config/main to get r.js to work properly - note: it only works correctly with node, not when run in Rhino

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Do not modify or remove the comments around these scripts - they are used for the build process -->
         <!-- scripts concatenated and minified via build script -->
         <script type="text/javascript" src="lib/cordova-2.2.0/cordova-2.2.0.js"></script>
-        <script type="text/javascript" data-main="config" src="lib/require-2.1.1/require.js"></script>
+        <script type="text/javascript" data-main="main" src="lib/require-2.1.1/require.js"></script>
         <!-- end scripts -->
     </body>
 </html>
