More build cleanup
- Moved Ant macros into separate file

- Created new macros for jslint, jshint, csslint

- Created .bat files to run jslint, jshint, csslint on single files

- Ensure that dependency chain makes sense for build target

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <body>
         <div id="loading" class="hero-unit">
             <h2>LTL P&D</h2>
-            <p>Application loading, please wait...</p>
+            <p>Loading...</p>
+            <img src="img/loading.gif" alt="Loading" />
         </div>
         <div id="main" class="container-fluid">
         </div>
-        <!-- Do not modify or remove the comments around these scripts - they are used for the build process -->
-        <!-- scripts concatenated and minified via build script -->
         <script type="text/javascript" src="lib/cordova-2.2.0/cordova-2.2.0.js"></script>
         <script type="text/javascript" data-main="main" src="lib/require-2.1.1/require.js"></script>
-        <!-- end scripts -->
     </body>
 </html>
