--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -1,40 +1,38 @@
-<div class="navbar navbar-static-top navbar-inverse">
-    <div class="navbar-inner">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </a>
+<div id="login-view">
 
-        <a class="brand" href="#">LTL P&D</a>
+    <!-- Nav bar -->
+    <div class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
 
-        <div class="nav-collapse collapse">
-            <ul class="nav">
-                <li><a href="#about">About</a></li>
-            </ul>
+            <!-- Navbar button (when collapsed) -->
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+
+            <!-- Everything you want to always show goes out here -->
+            <a class="brand" href="#">LTL P&D</a>
+
+            <!-- Everything you want collapsed at 940px or less goes in here -->
+            <div class="nav-collapse collapse pull-right">
+                <ul class="nav">
+                    <li><a href="#about">About</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="row-fluid">
-    <h1>Login</h1>
-</div>
+    <div class="row span4 offset4">
+        <form>
+            <fieldset>
+                <legend>Login</legend>
 
-<div class="row-fluid">
-    <div class="span4 offset4">
-        <input id="userName" type="text" placeholder="Username" />
+                <input id="userName" name="userName" class="span4" type="text" placeholder="Username" />
+                <input id="password" name="password" class="span4" type="password" placeholder="Password" />
+
+                <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
+            </fieldset>
+        </form>
     </div>
 </div>
-
-<div class="row-fluid">
-    <div class="span4 offset4">
-        <input id="password" type="text" placeholder="Password" />
-    </div>
-</div>
-
-<div class="row-fluid">
-    <div class="span4 offset4">
-        <button id="login" class="btn btn-primary btn-block">Login</button>
-    </div>
-</div>
-
