--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -17,22 +17,22 @@
             <!-- Everything you want collapsed at 940px or less goes in here -->
             <div class="nav-collapse collapse pull-right">
                 <ul class="nav">
+                    <li><a href="#settings">Settings</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="row span4 offset4">
-        <form>
-            <fieldset>
-                <legend>Login</legend>
+    <!-- Login form -->
+    <form class="row span4 offset4">
+        <fieldset>
+            <legend>Please login:</legend>
 
-                <input id="userName" name="userName" class="span4" type="text" placeholder="Username" />
-                <input id="password" name="password" class="span4" type="password" placeholder="Password" />
+            <input id="userName" name="userName" class="span4" type="text" placeholder="Username" />
+            <input id="password" name="password" class="span4" type="password" placeholder="Password" />
 
-                <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
-            </fieldset>
-        </form>
-    </div>
+            <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
+        </fieldset>
+    </form>
 </div>
