Work on responsive login & about

--- a/html/AboutView.html
+++ b/html/AboutView.html
@@ -1,5 +1,35 @@
-<div>
-    <h1>About!</h1>
+<div id="about-view" class="container-fluid">
 
-    <a href="#login">Back</a>
+    <!-- Top nav bar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="brand" href="#">About</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- About form -->
+    <div class="row-fluid">
+        <div class="span4 offset4 padded">
+            <div class="padded-inner">
+                <h1>About LTL P&D</h1>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae libero id urna molestie tincidunt a ut est. Mauris tempor ante vitae tortor porttitor luctus. Suspendisse orci quam, viverra vitae posuere vel, lobortis ut nulla. Etiam id risus velit. Nam metus nisl, vulputate ut vulputate eu, auctor quis risus. Nunc non eros vitae enim porttitor imperdiet. Duis et faucibus massa. Suspendisse in dolor sem. Nulla facilisi. In lorem lacus, mollis eleifend congue eu, porta non tellus. Donec vitae congue quam. Donec non molestie magna. Sed lobortis ornare nisl semper sagittis.
+
+    Maecenas augue nunc, condimentum nec fermentum nec, mattis a orci. Nam risus enim, placerat vitae pharetra vitae, interdum vitae ante. Nulla nec accumsan nulla. Cras id augue at nunc venenatis vulputate aliquet in dui. Nunc vehicula placerat erat eu commodo. Mauris lectus diam, varius vel semper vel, euismod nec elit. Nam tempor fringilla aliquam. Integer laoreet urna non tellus euismod lobortis. Nunc aliquet sodales metus, eget sodales mauris pharetra quis.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bottom nav bar -->
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a href="#login" class="btn">Back</a>
+            </div>
+        </div>
+    </div>
+
 </div>
