--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -1,25 +1,27 @@
 <div id="login-view" class="container-fluid">
 
-    <!-- Nav bar -->
-    <div class="navbar navbar-inverse navbar-static-top">
+    <!-- Top nav bar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
+            <div class="container-fluid">
 
-            <!-- Navbar button (when collapsed) -->
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
+                <!-- Navbar menu toggle button (when collapsed) -->
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
 
-            <!-- Everything you want to always show goes out here -->
-            <a class="brand" href="#">LTL P&D</a>
+                <!-- Everything you want to always show goes out here -->
+                <a class="brand" href="#">LTL P&D</a>
 
-            <!-- Everything you want collapsed at 940px or less goes in here -->
-            <div class="nav-collapse collapse pull-right">
-                <ul class="nav">
-                    <li><a href="#settings">Settings</a></li>
-                    <li><a href="#about">About</a></li>
-                </ul>
+                <!-- Everything you want collapsed at 940px or less goes in here -->
+                <div class="nav-collapse collapse pull-right">
+                    <ul class="nav">
+                        <li><a href="#settings">Settings</a></li>
+                        <li><a href="#about">About</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
