--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>LTL P&D</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/pre-bootstrap-responsive.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap-responsive.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     </head>
