--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -28,8 +28,8 @@
 
     <!-- Login form -->
     <div class="row-fluid">
-        <div class="span4 offset4 padded">
-            <form class="padded-inner">
+        <div class="span4 offset4">
+            <form class="span-content well">
                 <fieldset>
                     <legend>Please login:</legend>
 
