--- a/html/AboutView.html
+++ b/html/AboutView.html
@@ -11,8 +11,8 @@
 
     <!-- About form -->
     <div class="row-fluid">
-        <div class="span4 offset4 padded">
-            <div class="padded-inner">
+        <div class="span10 offset1">
+            <div class="span-content well">
                 <h1>About LTL P&D</h1>
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae libero id urna molestie tincidunt a ut est. Mauris tempor ante vitae tortor porttitor luctus. Suspendisse orci quam, viverra vitae posuere vel, lobortis ut nulla. Etiam id risus velit. Nam metus nisl, vulputate ut vulputate eu, auctor quis risus. Nunc non eros vitae enim porttitor imperdiet. Duis et faucibus massa. Suspendisse in dolor sem. Nulla facilisi. In lorem lacus, mollis eleifend congue eu, porta non tellus. Donec vitae congue quam. Donec non molestie magna. Sed lobortis ornare nisl semper sagittis.
