--- a/html/LoginView.html
+++ b/html/LoginView.html
@@ -1,4 +1,4 @@
-<div id="login-view" class="container-fluid">
+<div id="login-view">
 
     <!-- Top nav bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,19 +26,23 @@
         </div>
     </div>
 
-    <!-- Login form -->
-    <div class="row-fluid">
-        <div class="span4 offset4">
-            <form class="span-content well">
-                <fieldset>
-                    <legend>Please login:</legend>
+    <div class="container-fluid">
 
-                    <input id="userName" name="userName" type="text" placeholder="Username" />
-                    <input id="password" name="password" type="password" placeholder="Password" />
+        <!-- Login form -->
+        <div class="row-fluid">
+            <div class="span4 offset4">
+                <form class="span-content well">
+                    <fieldset>
+                        <legend>Please login:</legend>
 
-                    <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
-                </fieldset>
-            </form>
+                        <input id="userName" name="userName" type="text" placeholder="Username" />
+                        <input id="password" name="password" type="password" placeholder="Password" />
+
+                        <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
+                    </fieldset>
+                </form>
+            </div>
         </div>
+
     </div>
 </div>
