--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <p>Loading...</p>
             <img src="img/loading.gif" alt="Loading" />
         </div>
-        <div id="container">
+
+        <div id="root">
         </div>
+
         <script type="text/javascript" src="lib/cordova-2.2.0/cordova-2.2.0.js"></script>
         <script type="text/javascript" data-main="main" src="lib/require-2.1.1/require.js"></script>
     </body>
