Prototype work on actions... probably not what we will end up going with

--- a/src/html/StopCollectionItemView.html
+++ b/src/html/StopCollectionItemView.html
@@ -1,10 +1,12 @@
-<div class="span3 span-content well">
+<div id="container" class="span3 span-content well">
     <h1><%- title %></h1>
     <strong>Name:</strong><p><%- properties.name %></p>
     <strong>Address:</strong><p><%- properties.address %></p>
     <strong>Phone:</strong><p><%- properties.phone %></p>
+    <!--
     <button type="button" class="btn btn-primary">Open</button>
     <button type="button" class="btn">Edit</button>
     <button type="button" class="btn btn-danger">Delete</button>
+    -->
 </div>
 
