Refactoring of view creation

--- a/src/html/AboutView.html
+++ b/src/html/AboutView.html
@@ -4,14 +4,13 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand" href="#">About</a>
+                <a class="brand" href="#">LTL P&D</a>
             </div>
         </div>
     </div>
 
     <div class="container-fluid">
 
-        <!-- About form -->
         <div class="row-fluid">
             <div class="span10 offset1">
                 <div class="span-content well">
