--- a/src/html/LoginView.html
+++ b/src/html/LoginView.html
@@ -38,7 +38,7 @@
                         <input id="userName" name="userName" type="text" placeholder="Username" />
                         <input id="password" name="password" type="password" placeholder="Password" />
 
-                        <button id="login" type="button" class="btn btn-large btn-block btn-primary">Login</button>
+                        <a data-action="login" href="#boxes" class="btn btn-large btn-block btn-primary">Login</a>
                     </fieldset>
                 </form>
             </div>
