--- a/src/html/AboutView.html
+++ b/src/html/AboutView.html
@@ -1,10 +1,10 @@
-<div id="about-view">
+<div class="about-view">
 
     <!-- Top nav bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand" href="#">LTL P&D</a>
+                <a class="brand" href="#login">LTL P&D</a>
             </div>
         </div>
     </div>
