--- a/src/html/BoxesView.html
+++ b/src/html/BoxesView.html
@@ -1,4 +1,4 @@
-<div id="boxes-view">
+<div class="boxes-view">
 
     <!-- Top nav bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -12,7 +12,7 @@
     <div class="container-fluid">
 
         <!-- Inbox/Outbox/Sentbox -->
-        <div id="tabbable">
+        <div class="tabbable">
             <ul class="nav nav-tabs">
                 <li class="active">
                     <a href="#inbox" data-toggle="tab">Inbox</a>
@@ -40,6 +40,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
