--- a/src/html/LoginView.html
+++ b/src/html/LoginView.html
@@ -1,4 +1,4 @@
-<div id="login-view">
+<div class="login-view">
 
     <!-- Top nav bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -27,10 +27,10 @@
     </div>
 
     <div class="container-fluid">
-
-        <!-- Login form -->
         <div class="row-fluid">
             <div class="span4 offset4">
+
+                <!-- Login form -->
                 <form class="span-content well">
                     <fieldset>
                         <legend>Please login:</legend>
@@ -43,6 +43,5 @@
                 </form>
             </div>
         </div>
-
     </div>
 </div>
