--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>LTL P&D</title>
+        <title>LTL P&amp;D</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="lib/twitter-bootstrap-2.2.1/css/bootstrap.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="css/pre-bootstrap-responsive.css" media="screen" />
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="loading" class="hero-unit">
-            <h2>LTL P&D</h2>
+            <h2>LTL P&amp;D</h2>
             <p>Loading...</p>
             <img src="img/loading.gif" alt="Loading" />
         </div>
