--- a/src/html/SettingsView.html
+++ b/src/html/SettingsView.html
@@ -1,4 +1,4 @@
-<div id="settings-view">
+<div class="settings-view">
     <h1>Settings</h1>
-    <a href="#">Back</a>
+    <a href="#login">Back</a>
 </div>
