--- a/src/html/StopCollectionItemView.html
+++ b/src/html/StopCollectionItemView.html
@@ -1,12 +1,15 @@
-<div id="container" class="span3 span-content well">
-    <h1><%- title %></h1>
-    <strong>Name:</strong><p><%- properties.name %></p>
-    <strong>Address:</strong><p><%- properties.address %></p>
-    <strong>Phone:</strong><p><%- properties.phone %></p>
-    <!--
-    <button type="button" class="btn btn-primary">Open</button>
-    <button type="button" class="btn">Edit</button>
-    <button type="button" class="btn btn-danger">Delete</button>
-    -->
+<div class="stop-collection-item-view">
+
+    <div class="span3 span-content well">
+        <h1>{{ title }}</h1>
+        <strong>Name:</strong><p>{{ properties.name }}</p>
+        <strong>Address:</strong><p>{{ properties.address }}</p>
+        <strong>Phone:</strong><p>{{ properties.phone }}</p>
+
+        <a data-action="itemDetail" href="#itemDetail/{{ type }}/{{ id }}" class="btn btn-primary">Open</a>
+        <a data-action="itemEdit" href="#itemEdit/{{ type }}/{{ id }}" class="btn">Edit</a>
+        <a data-action="itemDelete" href="#itemDelete/{{ type }}/{{ id }}" class="btn btn-danger">Delete</a>
+    </div>
+
 </div>
 
